--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/pic.png" alt="sadi's photo">
+      <img src="images/pic.png" alt="https://drive.google.com/file/d/1n2wQamUcQjzU-VX2QM4vpyCfmpAOPTug/view?usp=sharing">
       <h2>Hello.</h2>
       <p class="biopara">I am An enthusiastic  and self-motivated Student who wants to build up a carrier in the IT Field where I will put my maximum effort to use my educational knowledge to prove my ability and performance.</p>
     </div>
@@ -29,13 +29,13 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-pic" src="images/skillphot.png" alt="skillphoto">
+        <img class="skill-pic" src="images/skillphot.png" alt="https://drive.google.com/file/d/1PNFMFMVeuDBW5MlrCYfQdjQEfjJgVx6N/view?usp=sharing">
         <h3>Experience</h3>
         <p >Internet Researcher & Data Mining Specialist at <a href="https://www.upwork.com/o/profiles/users/~0187c67eeb7ddd7918/">UPwork</a> UPwork
 Making more than 15 successful projects.</p>
       </div>
       <div class="skill-row">
-        <img class="chillpic" src="images/chillies.png" alt="chillpic">
+        <img class="chillpic" src="images/chillies.png" alt="https://drive.google.com/file/d/1FlvZn20QD99j_EtNcF2Wt1R1wXknyYyZ/view?usp=sharing">
         <h3>My abilities</h3>
         <p >Huge knowledge in managing Research in Internet.
 Wide knowledge of Data Mining, Cloud computing.
