--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/pic.png" alt="sadi's photo">
+      <img src="CV/images/pic.png" alt="sadi's photo">
       <h2>Hello.</h2>
       <p class="biopara">I am An enthusiastic  and self-motivated Student who wants to build up a carrier in the IT Field where I will put my maximum effort to use my educational knowledge to prove my ability and performance.</p>
     </div>
