--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="CV/images/pic.png" alt="sadi's photo">
+      <img src="Images/pic.png" alt="sadi's pic ">
       <h2>Hello.</h2>
       <p class="biopara">I am An enthusiastic  and self-motivated Student who wants to build up a carrier in the IT Field where I will put my maximum effort to use my educational knowledge to prove my ability and performance.</p>
     </div>
@@ -29,13 +29,13 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-pic" src="images/skillphot.png" alt="skill photo ">
+        <img class="skill-pic" src="Images/skillphot.png" alt="skill photo ">
         <h3>Experience</h3>
         <p >Internet Researcher & Data Mining Specialist at <a href="https://www.upwork.com/o/profiles/users/~0187c67eeb7ddd7918/">UPwork</a> UPwork
 Making more than 15 successful projects.</p>
       </div>
       <div class="skill-row">
-        <img class="chillpic" src="images/chillies.png" alt="chillipic ">
+        <img class="chillpic" src="Images/chillies.png" alt="chillipic ">
         <h3>My abilities</h3>
         <p >Huge knowledge in managing Research in Internet.
 Wide knowledge of Data Mining, Cloud computing.
